k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shopsphere-backend
  namespace: shopsphere

spec:
  replicas: 2

  selector:
    matchLabels:
      app: shopsphere-backend

  template:
    metadata:
      labels:
        app: shopsphere-backend

    spec:
      containers:
        - name: backend
          image: 584860297058.dkr.ecr.us-east-1.amazonaws.com/shopsphere-backend:v1

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
