k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shopsphere-frontend
  namespace: shopsphere

spec:
  replicas: 2

  selector:
    matchLabels:
      app: shopsphere-frontend

  template:
    metadata:
      labels:
        app: shopsphere-frontend

    spec:
      containers:
        - name: frontend
          image: 584860297058.dkr.ecr.us-east-1.amazonaws.com/shopsphere-frontend:v1

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
